--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,8 @@
 
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/wifiauth.min.css" rel="stylesheet">
+    <link href="css/demo.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
@@ -30,20 +31,16 @@
   <div class="lang center">
     <span><a href="#" onclick="select_language('ru');return false;"><img src="img/ru.png"></a></span>
     <span><a href="#" onclick="select_language('en');return false;"><img src="img/uk.png"></a></span>
-    <span><a href="#" onclick="select_language('de');return false;"><img src="img/de.png"></a></span>
-    <span><a href="#" onclick="select_language('cn');return false;"><img src="img/cn.png"></a></span>
   </div>
 
   <div class="logo center">
-    <img src="img/metropol_logo.png">
+    <img src="img/comitenwifi.png">
   </div>
 
 
   <div class="info center">
-    <span lang="ru">Для подключения к интернету отеля Метрополь, наберите номер телефона.  Плата не взымается.</span>
-    <span lang="en">To connect to the Hotel’s Metropol free Internet, please dial the phone number free of charge.</span>
-    <span lang="de">Um eine Verbindung zum Internet des Hotels Metropol herzustellen, bitte wählen Sie die gebührenfreie Telefonnummer.</span>
-    <span lang="cn">上大都会酒店的免费网络请拨电话号码。用打电话是免费的。</span>
+    <span lang="ru">Для подключения к интернету, наберите номер телефона.  Плата не взымается.</span>
+    <span lang="en">For Internet connection, please dial the phone number free of charge.</span>
   </div>
 
   <div class="call-link center">
